2024-07-20T01:32:49Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10016491411 # 416
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-20
* notice: last 14d: unq all: 8 40
* notice: prev accum: outdated-unq outdated-all / unq all: 734 4122 / 746 4174
* notice: next accum: outdated-unq outdated-all / unq all: 737 4134 / 746 4174
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-07-05] / []

2024-07-18T12:40:08Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9991668755 # 413
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-18
* notice: last 14d: unq all: 11 52
* notice: prev accum: outdated-unq outdated-all / unq all: 733 4115 / 746 4174
* notice: next accum: outdated-unq outdated-all / unq all: 734 4122 / 746 4174
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-07-04] / []

2024-07-18T01:33:53Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9984048213 # 412
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-18
* notice: last 14d: unq all: 12 59
* notice: prev accum: outdated-unq outdated-all / unq all: 733 4115 / 743 4162
* notice: next accum: outdated-unq outdated-all / unq all: 733 4115 / 746 4174
* notice: prev exec diff / last date diff / accum: unq all: +3 +12 -0 -0 / +3 +12 -0 -0 / 3 12
* notice: removed / changed dates: [] / [2024-07-17]

2024-07-17T12:39:12Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9974365414 # 411