@@ -1,6 +1,6 @@
 {
-  "count": 40,
-  "uniques": 8,
+  "count": 64,
+  "uniques": 9,
   "views": [
     {
       "timestamp": "2024-07-07T00:00:00Z",
@@ -26,6 +26,11 @@
       "timestamp": "2024-07-17T00:00:00Z",
       "count": 12,
       "uniques": 3
+    },
+    {
+      "timestamp": "2024-07-20T00:00:00Z",
+      "count": 24,
+      "uniques": 1
     }
   ]
 }
