@@ -1,3 +1,12 @@
+2024-07-21T01:40:51Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10024665022 # 418
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-21
+* notice: last 14d: unq all: 9 64
+* notice: prev accum: outdated-unq outdated-all / unq all: 737 4134 / 746 4174
+* notice: next accum: outdated-unq outdated-all / unq all: 737 4134 / 747 4198
+* notice: prev exec diff / last date diff / accum: unq all: +1 +24 -0 -0 / +1 +24 -0 -0 / 1 24
+* notice: removed / changed dates: [] / [2024-07-20]
+
 2024-07-20T01:32:49Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10016491411 # 416
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-20
